add KDT as sample